' Generated by UML Generator
' Encoded: bP4zJyD038Rt-nMMkWIXICmTK6cchXI9eM9mxjnWaVXEFgULAFtl72YL8jg5pL_luwzLDbGRXzxb3vQ4YWFu7dD-CbDkHwEDZxBbJu87zyw1mBFwdfpxhO8rAXS4d1p0_QbOnluC0x9Kg5rUmhPWfDkztItX43cuyqNvGfEgLJfMbtJnCOGcIk21n79rfMlYVa_qJocssHIzmSJ0mc2XDHr8iPjeIQaSW9x9Sw8PTl6dpU9s6u2wZTo_ef7EWocEkf5cJFE1VhQlww_7gr7SjD_jv8eab6Tz0m
' URL: http://www.plantuml.com/plantuml/uml/bP4zJyD038Rt-nMMkWIXICmTK6cchXI9eM9mxjnWaVXEFgULAFtl72YL8jg5pL_luwzLDbGRXzxb3vQ4YWFu7dD-CbDkHwEDZxBbJu87zyw1mBFwdfpxhO8rAXS4d1p0_QbOnluC0x9Kg5rUmhPWfDkztItX43cuyqNvGfEgLJfMbtJnCOGcIk21n79rfMlYVa_qJocssHIzmSJ0mc2XDHr8iPjeIQaSW9x9Sw8PTl6dpU9s6u2wZTo_ef7EWocEkf5cJFE1VhQlww_7gr7SjD_jv8eab6Tz0m
' Generated on: 2025-12-14T17:16:15.107673

@startuml
skinparam classAttributeIconSize 0
hide circle

class Barista {
  +{static} main(args: String[]): void
}

class Tea {
  +brew(): void
  +addCondiments(): void
}

class Coffee {
  +brew(): void
  +addCondiments(): void
}

abstract class CaffeineBeverage {
  +prepareRecipe(): void
  #brew(): void
  #addCondiments(): void
  -boilWater(): void
  -pourInCup(): void
}

Tea --|> CaffeineBeverage
Coffee --|> CaffeineBeverage
@enduml